[package]
name = "eth-types"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
rlp = "0.5.0"
rlp-derive = "0.1.0"
ethereum-types = { version = "0.13.1", features = ["codec", "rlp"], default-features = false }
derive_more = "^0.99.2"
eth2_ssz = { git = "https://github.com/webb-tools/lighthouse.git", branch = "develop", default-features = false, optional = true }
eth2_ssz_derive = { git = "https://github.com/webb-tools/lighthouse.git", branch = "develop", default-features = false, optional = true }
tree_hash = { git = "https://github.com/webb-tools/lighthouse.git", branch = "develop", default-features = false, optional = true }
tree_hash_derive = { git = "https://github.com/webb-tools/lighthouse.git", branch = "develop", default-features = false, optional = true }
eth2_serde_utils = { git = "https://github.com/webb-tools/lighthouse.git", branch = "develop", default-features = false, optional = true }
hex = "0.4.0"

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

[target.'cfg(feature = "std")'.dependencies]
serde-big-array = "0.4.1"

[features]
default = ["eip1559", "eth2", "std"]
std = [
    "serde",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-io/std",
	"sp-std/std",
    "ethereum-types/std",
]
eip1559 = []
eth2 = ["dep:eth2_ssz", "dep:eth2_ssz_derive", "dep:tree_hash", "dep:tree_hash_derive", "dep:eth2_serde_utils"]

[patch.crates-io]
eth2_hashing = { git = "https://github.com/sigp/lighthouse", rev = "df51a73272489fe154bd10995c96199062b6c3f7"}
eth2_serde_utils = { git = "https://github.com/sigp/lighthouse", rev = "df51a73272489fe154bd10995c96199062b6c3f7"}
eth2_ssz = { git = "https://github.com/sigp/lighthouse", rev = "df51a73272489fe154bd10995c96199062b6c3f7"}
tree_hash = { git = "https://github.com/sigp/lighthouse", rev = "df51a73272489fe154bd10995c96199062b6c3f7"}