[package]
name = "dkg-rococo-runtime"
description = "Webb Protocol DKG Network runtime"
version = "3.0.0"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"]}
log = { workspace = true }
scale-info = { workspace = true }
hex-literal = { workspace = true, optional = true }
smallvec = { workspace = true }

# DKG Substrate Dependencies
pallet-dkg-metadata = { workspace = true }
dkg-runtime-primitives = { workspace = true }
pallet-dkg-proposals = { workspace = true }
pallet-dkg-proposal-handler = { workspace = true }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-core = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

## Substrate FRAME Dependencies
frame-executive = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }

## Substrate Pallet Dependencies
pallet-aura = { workspace = true }
pallet-balances = { workspace = true }
pallet-randomness-collective-flip = { workspace = true }
pallet-collective = { workspace = true }
pallet-sudo ={ workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-authorship = { workspace = true }
pallet-session = { workspace = true }
pallet-indices = { workspace = true }
pallet-treasury = { workspace = true }
pallet-identity = { workspace = true }
pallet-vesting = { workspace = true }
pallet-utility = { workspace = true }
pallet-democracy = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-preimage = { workspace = true }

# Cumulus Dependencies
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-parachain-system ={ workspace = true }
cumulus-pallet-dmp-queue = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
cumulus-primitives-utility = { workspace = true }
pallet-collator-selection = { workspace = true }
parachain-info = { workspace = true }

# Polkadot Dependencies
polkadot-parachain = { workspace = true }
polkadot-runtime-common = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }
pallet-xcm = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"log/std",
	"sp-api/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"parachain-info/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"pallet-collator-selection/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"pallet-xcm/std",
	"polkadot-parachain/std",
	"polkadot-runtime-common/std",
	"pallet-aura/std",
	"sp-consensus-aura/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"pallet-indices/std",
	"pallet-treasury/std",
	"pallet-identity/std",
	"pallet-vesting/std",
	"pallet-utility/std",
	"pallet-democracy/std",
	"pallet-scheduler/std",
	"pallet-preimage/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"frame-system-rpc-runtime-api/std",

	# DKG
	"pallet-dkg-metadata/std",
	"dkg-runtime-primitives/std",
	"pallet-dkg-proposals/std",
	"pallet-dkg-proposal-handler/std",
]
runtime-benchmarks = [
	"hex-literal",
	"frame-benchmarking",
	"frame-system-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",

	# DKG deps
	"pallet-dkg-metadata/runtime-benchmarks",
	"pallet-dkg-proposals/runtime-benchmarks",
	"pallet-dkg-proposal-handler/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
]
